apps/streaming-tools/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-tools
spec:
  selector:
    app: streaming-tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9876
