apps/streaming-tools/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-tools-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: streaming-tools-tls
      hosts:
        - botcallback.picturo.us
  rules:
    - host: botcallback.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streaming-tools-backend
                port:
                  number: 9876
